--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -19,11 +19,40 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.24.1'
+        go-version: '1.24.4'
+
+    - uses: Jerome1337/gofmt-action@v1.0.5
+      with:
+        gofmt-path: './'
+        gofmt-flags: '-d -e -l'
+
+    # Install gotestfmt on the VM running the action.
+    - name: Set up gotestfmt
+      uses: GoTestTools/gotestfmt-action@v2
+      with:
+        # Optional: pass GITHUB_TOKEN to avoid rate limiting.
+        token: ${{ secrets.GITHUB_TOKEN }}
+        # Optional: pass the gotestfmt version you want to run.
+        version: v2.0.0
+        # Optional: pass an organization name and repo to use a fork
+        org: GoTestTools
+        repo: gotestfmt
+
+    # Run tests with nice formatting. Save the original log in /tmp/gotest.log
+    - name: Run tests
+      run: |
+        set -euo pipefail
+        go test -json -v ./... 2>&1 | tee /tmp/gotest.log | gotestfmt
+
+    # Upload the original go test log as an artifact for later review.
+    - name: Upload test log
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: test-log
+        path: /tmp/gotest.log
+        if-no-files-found: error
 
     - name: Build
       run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
 
