--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -23,7 +23,8 @@ jobs:
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2025.1
         with:
-          pr-mode: false
+          pr-mode: true
+          args: --linter,jetbrains/qodana-go:2025.1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
           QODANA_ENDPOINT: 'https://qodana.cloud'
