--- a/examples/cluster/apps/frontend.yaml
+++ b/examples/cluster/apps/frontend.yaml
@@ -3,7 +3,60 @@ namespace: apps
 workload: Deployment
 containers:
   - name: frontend
-    image: nginx:1.21
+    image: nginx:1.21-alpine
     ports:
       - name: http
-        containerport: 80
+        containerPort: 80
+      - name: https
+        containerPort: 443
+    env:
+      - name: NGINX_HOST
+        value: example.com
+      - name: NGINX_PORT
+        value: "80"
+      - name: BACKEND_API_URL
+        valueFrom:
+          configMapKeyRef:
+            name: frontend-config
+            key: backend-api-url
+    resources:
+      requests:
+        memory: 64Mi
+        cpu: 50m
+      limits:
+        memory: 256Mi
+        cpu: 200m
+    livenessProbe:
+      httpGet:
+        path: /
+        port: 80
+      initialDelaySeconds: 10
+      periodSeconds: 30
+    readinessProbe:
+      httpGet:
+        path: /
+        port: 80
+      initialDelaySeconds: 5
+      periodSeconds: 10
+    volumeMounts:
+      - name: nginx-config
+        mountPath: /etc/nginx/conf.d
+        readOnly: true
+      - name: static-content
+        mountPath: /usr/share/nginx/html
+      - name: nginx-cache
+        mountPath: /var/cache/nginx
+      - name: nginx-logs
+        mountPath: /var/log/nginx
+volumes:
+  - name: nginx-config
+    configMap:
+      name: nginx-config
+  - name: static-content
+    configMap:
+      name: static-content
+  - name: nginx-cache
+    emptyDir: {}
+  - name: nginx-logs
+    emptyDir:
+      sizeLimit: 500Mi
