--- a/examples/cluster/infra/logging.yaml
+++ b/examples/cluster/infra/logging.yaml
@@ -1,6 +1,88 @@
 name: logging
 namespace: infra
-workload: Deployment
+workload: DaemonSet
 containers:
-  - name: logging
-    image: fluent/fluentd
+  - name: fluentd
+    image: fluent/fluentd-kubernetes-daemonset:v1.16-debian-elasticsearch7-1
+    ports:
+      - name: fluentd
+        containerport: 24224
+        protocol: TCP
+      - name: prometheus
+        containerport: 24231
+        protocol: TCP
+    env:
+      - name: FLUENT_ELASTICSEARCH_HOST
+        valueFrom:
+          configMapKeyRef:
+            name: fluentd-config
+            key: elasticsearch-host
+      - name: FLUENT_ELASTICSEARCH_PORT
+        valueFrom:
+          configMapKeyRef:
+            name: fluentd-config
+            key: elasticsearch-port
+      - name: FLUENT_ELASTICSEARCH_SCHEME
+        value: https
+      - name: FLUENT_ELASTICSEARCH_SSL_VERIFY
+        value: "true"
+      - name: FLUENT_ELASTICSEARCH_USER
+        valueFrom:
+          secretKeyRef:
+            name: elasticsearch-credentials
+            key: username
+      - name: FLUENT_ELASTICSEARCH_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: elasticsearch-credentials
+            key: password
+      - name: FLUENT_CONTAINER_TAIL_EXCLUDE_PATH
+        value: /var/log/containers/fluent*
+      - name: FLUENT_CONTAINER_TAIL_PARSER_TYPE
+        value: /^(?<time>.+) (?<stream>stdout|stderr) [^ ]* (?<log>.*)$/
+    resources:
+      requests:
+        memory: 200Mi
+        cpu: 100m
+      limits:
+        memory: 1Gi
+        cpu: 1000m
+    livenessProbe:
+      httpGet:
+        path: /fluentd.pod.healthcheck?json=%7B%22log%22%3A+%22health+check%22%7D
+        port: 9880
+      initialDelaySeconds: 5
+      periodSeconds: 5
+    readinessProbe:
+      httpGet:
+        path: /fluentd.pod.healthcheck?json=%7B%22log%22%3A+%22health+check%22%7D
+        port: 9880
+      initialDelaySeconds: 5
+      periodSeconds: 5
+    volumeMounts:
+      - name: varlog
+        mountPath: /var/log
+      - name: varlibdockercontainers
+        mountPath: /var/lib/docker/containers
+        readOnly: true
+      - name: fluentd-config
+        mountPath: /fluentd/etc/fluent.conf
+        subPath: fluent.conf
+      - name: fluentd-buffer
+        mountPath: /var/log/fluentd-buffers
+    securityContext:
+      privileged: true
+      runAsUser: 0
+volumes:
+  - name: varlog
+    hostPath:
+      path: /var/log
+  - name: varlibdockercontainers
+    hostPath:
+      path: /var/lib/docker/containers
+  - name: fluentd-config
+    configMap:
+      name: fluentd-config
+  - name: fluentd-buffer
+    emptyDir:
+      sizeLimit: 10Gi
