correct Flux GitOps directory structure and kustomization generation
  - Add FluxPlacement field to ManifestLayout for Flux integration awareness
  - Fix kustomization.yaml generation to reference Flux Kustomization files instead of subdirectories when FluxPlacement is FluxIntegrated
  - Prevent invalid root kustomization.yaml creation at cluster level
  - Fix path duplication in FullRepoPath() to eliminate double nesting (flux-system/flux-system/, backend/backend/)
  - Update walker functions to pass FluxPlacement mode to all ManifestLayout instances
  - Set proper KustomizationMode: KustomizationExplicit for applications, KustomizationRecursive for bundles
  - Bundle-level kustomizations now correctly reference flux-system-kustomization-*.yaml files
  - Individual application kustomizations reference actual resource YAML files

  Fixes proper GitOps workflow where apps/kustomization.yaml and infra/kustomization.yaml reference Flux Kustomization resources rather than subdirectories, creating a correct hierarchical structure for
  FluxCD.

--- a/examples/cluster/infra/metrics.yaml
+++ b/examples/cluster/infra/metrics.yaml
@@ -6,7 +6,7 @@ containers:
     image: prom/prometheus:v2.46.0
     ports:
       - name: web
-        containerport: 9090
+        containerPort: 9090
     args:
       - --config.file=/etc/prometheus/prometheus.yml
       - --storage.tsdb.path=/prometheus/
