fix: correct YAML structure in CI workflow
Fix malformed YAML in GitHub Actions workflow where Kubernetes YAML
content was not properly escaped, causing workflow validation errors.
Changed from inline echo to heredoc for proper multiline content handling.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -209,17 +209,19 @@ jobs:
     - name: Create examples directory structure
       run: |
         mkdir -p examples/{app-workloads,clusters,multi-oci,bootstrap,patches}
-        echo 'apiVersion: generators.gokure.dev/v1alpha1
-kind: AppWorkload
-metadata:
-  name: example-app
-  namespace: default
-spec:
-  workload: Deployment
-  replicas: 2
-  containers:
-    - name: app
-      image: nginx:1.21' > examples/app-workloads/example.yaml
+        cat > examples/app-workloads/example.yaml << 'EOF'
+        apiVersion: generators.gokure.dev/v1alpha1
+        kind: AppWorkload
+        metadata:
+          name: example-app
+          namespace: default
+        spec:
+          workload: Deployment
+          replicas: 2
+          containers:
+            - name: app
+              image: nginx:1.21
+        EOF
 
     - name: Run demo with internals
       run: make demo-internals
