--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -1,10 +1,13 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Build and Test
 
 permissions:
   contents: read
+
+env:
+  GO_VERSION: '1.24.6'
 
 on:
   push:
@@ -20,9 +23,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.24.4'
+        go-version: ${{ env.GO_VERSION }}
+        check-latest: true
 
     # Install gotestfmt on the VM running the action.
     - name: Set up gotestfmt
