--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main, develop ]
   push:
-    branches: [ main, develop, 'releases/*' ]
+    branches: [ main, develop, 'release/*' ]
 
 env:
   GO_VERSION: '1.24.6'
