ci: enforce Go version consistency in PR checks
- Add check-go-version step to quick-check job
- Ensures all PRs maintain version consistency with mise.toml
- Update workflow documentation to reflect new check

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -48,6 +48,9 @@ jobs:
     - name: Install dependencies
       run: make deps
 
+    - name: Check Go version consistency
+      run: make check-go-version
+
     - name: Quick checks
       run: make check
 
