chore: align repo with crane scaffold and wharf standards
- Move CLAUDE.md to .claude/CLAUDE.md (concise, references AGENTS.md)
- Create AGENTS.md as comprehensive contributor guide at repo root
- Update mise.toml with tools, env, and standard tasks (build, test, lint, tidy, check, verify)
- Simplify .claude/settings.json to permissions-only structure
- Add check and test-short targets to Makefile
- Update DEVELOPMENT.md crane path references

--- a/mise.toml
+++ b/mise.toml
@@ -1,2 +1,31 @@
 [tools]
-go = "1.24.11"
+go = "1.24"
+golangci-lint = "1.64"
+
+[env]
+GOBIN = "{{config_root}}/.bin"
+PATH = "{{config_root}}/.bin:{{env.PATH}}"
+
+[tasks.build]
+description = "Build all executables"
+run = "make build"
+
+[tasks.test]
+description = "Run all tests"
+run = "make test"
+
+[tasks.lint]
+description = "Run linter"
+run = "make lint"
+
+[tasks.tidy]
+description = "Tidy go modules"
+run = "make tidy"
+
+[tasks.check]
+description = "Quick pre-commit check"
+run = "make check"
+
+[tasks.verify]
+description = "Run all checks (tidy, lint, test)"
+depends = ["tidy", "lint", "test"]
