fix: remove K8s 0.33 from CI compatibility matrix
K8s 0.33 has a structured-merge-diff v4/v6 conflict that causes CI
failures. Since the project already uses v0.33.2 by default (tested
in regular CI), and forward compatibility tests (0.34, 0.35) pass,
0.33 is redundant in the matrix.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -376,7 +376,7 @@ jobs:
 
     strategy:
       matrix:
-        k8s-version: ['0.33', '0.34', '0.35']
+        k8s-version: ['0.34', '0.35']
 
     steps:
     - name: Checkout code
