chore(deps): implement centralized dependency version management
Implements a centralized version management system to prevent
dependency upgrade PRs that require Go 1.25 before we're ready.

Changes:
- Add versions.yaml as single source of truth for dependency versions
  - Tracks both build versions (go.mod) and deployment compatibility
  - Defines Dependabot ignore constraints for blocked upgrades

- Add scripts/sync-versions.sh for validation and documentation
  - check: validates go.mod versions match versions.yaml
  - generate: creates compatibility documentation

- Update .github/dependabot.yml with restructured groups
  - Separate safe updates from version-sensitive ecosystems
  - Add ignore rules for deps requiring Go 1.25
  - Prevents problematic grouped PRs like #167

- Update .github/workflows/ci.yml
  - Read Go version from mise.toml (single source of truth)
  - Add version consistency validation step

- Add docs/compatibility.md (generated)
  - Documents build vs deployment compatibility
  - Shows supported version ranges per tool

This addresses the recurring Dependabot PR #167 issue where grouped
dependencies require Go 1.25, which is tracked separately in #133.

Related: #167, #133, #128

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,14 +15,47 @@ updates:
       - "go"
     commit-message:
       prefix: "chore(deps)"
+
+    # Separate groups for different coordination needs
     groups:
-      # Group minor and patch updates together to reduce PR noise
-      go-minor:
+      # Safe updates that don't require Go 1.25
+      go-safe:
         patterns:
-          - "*"
+          - "github.com/spf13/*"
+          - "github.com/stretchr/*"
+          - "gopkg.in/*"
+          - "github.com/pmezard/*"
+          - "github.com/blang/*"
         update-types:
           - "minor"
           - "patch"
+
+      # Kubernetes ecosystem - only patch updates
+      k8s-ecosystem:
+        patterns:
+          - "k8s.io/*"
+          - "sigs.k8s.io/*"
+        update-types:
+          - "patch"
+
+    # Ignore dependencies that require Go 1.25 (until #133 is done)
+    ignore:
+      # FluxCD ecosystem - blocked by #128 and Go 1.25 requirement
+      - dependency-name: "github.com/fluxcd/*"
+        update-types: ["version-update:semver-minor"]
+      - dependency-name: "github.com/controlplaneio-fluxcd/*"
+        update-types: ["version-update:semver-minor"]
+
+      # Infrastructure tools - need to match deployed versions or require Go 1.25
+      - dependency-name: "github.com/cert-manager/cert-manager"
+        versions: [">= 1.17"]  # Pin to 1.16.x until Go 1.25 ready
+      - dependency-name: "go.universe.tf/metallb"
+        versions: [">= 0.16"]  # Pin to 0.15.x to match deployed version
+
+      # Controller runtime - blocked by Go 1.25
+      - dependency-name: "sigs.k8s.io/controller-runtime"
+        versions: [">= 0.22"]
+
     open-pull-requests-limit: 10
 
   - package-ecosystem: "github-actions"
