fix(deps): block FluxCD major version updates in dependabot
FluxCD v1.0+ requires Go 1.25 (e.g., image-automation-controller
v1.0.4 requires go 1.25.0 vs v0.41.2 which uses go 1.24.0).

Extended dependabot ignore rules to block both minor and major version
updates for github.com/fluxcd/* and github.com/controlplaneio-fluxcd/*
packages until Go 1.25 upgrade is complete (#133).

Related: #128 (FluxCD ecosystem upgrade), #171 (blocked PR)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -42,9 +42,9 @@ updates:
     ignore:
       # FluxCD ecosystem - blocked by #128 and Go 1.25 requirement
       - dependency-name: "github.com/fluxcd/*"
-        update-types: ["version-update:semver-minor"]
+        update-types: ["version-update:semver-minor", "version-update:semver-major"]
       - dependency-name: "github.com/controlplaneio-fluxcd/*"
-        update-types: ["version-update:semver-minor"]
+        update-types: ["version-update:semver-minor", "version-update:semver-major"]
 
       # Infrastructure tools - need to match deployed versions or require Go 1.25
       - dependency-name: "github.com/cert-manager/cert-manager"
