chore(deps): document blocked dependency updates for Go 1.25
Update dependabot and versions.yaml to block and document dependency
updates that require Go 1.25:

Dependabot changes:
- Block metallb >= 0.15.3 (was >= 0.16, PR #169 slipped through)
- FluxCD major/minor blocks already in place from previous commit

versions.yaml documentation:
- metallb: Document that 0.15.3+ requires Go 1.25 and triggers k8s
  upgrade to 0.34+ (PR #169 closed)
- fluxcd: Document that image-automation-controller 1.0+ requires
  Go 1.25 (PR #171 closed)
- Both blocked until #133 (Go 1.25 upgrade) is complete

This ensures:
1. Dependabot won't create PRs for these blocked versions
2. Documentation clearly explains version constraints
3. CI validation enforces consistency between go.mod and versions.yaml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -50,7 +50,7 @@ updates:
       - dependency-name: "github.com/cert-manager/cert-manager"
         versions: [">= 1.17"]  # Pin to 1.16.x until Go 1.25 ready
       - dependency-name: "go.universe.tf/metallb"
-        versions: [">= 0.16"]  # Pin to 0.15.x to match deployed version
+        versions: [">= 0.15.3"]  # 0.15.3+ requires Go 1.25 (#169)
 
       # Controller runtime - blocked by Go 1.25
       - dependency-name: "sigs.k8s.io/controller-runtime"
