build: automate changelog generation with git-cliff
Add git-cliff for automated changelog generation from conventional
commits. This replaces manual CHANGELOG.md maintenance with a
reproducible workflow that parses git history.

- Add git-cliff to mise.toml tools
- Create cliff.toml with Keep a Changelog format
- Add changelog/changelog-preview targets to Makefile
- Regenerate CHANGELOG.md from git history
- Move changelogs/ to docs/reviews/ (review documents, not releases)

--- a/mise.toml
+++ b/mise.toml
@@ -1,6 +1,7 @@
 [tools]
 go = "1.24.12"
 golangci-lint = "1.64"
+git-cliff = "2"
 
 [env]
 GOBIN = "{{config_root}}/.bin"
@@ -29,3 +30,11 @@ run = "make check"
 [tasks.verify]
 description = "Run all checks (tidy, lint, test)"
 depends = ["tidy", "lint", "test"]
+
+[tasks.changelog]
+description = "Generate changelog from git history"
+run = "git cliff -o CHANGELOG.md"
+
+[tasks.changelog-preview]
+description = "Preview changelog changes"
+run = "git cliff --unreleased"
