--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,9 @@ on:
     tags:
       - 'v*'
 
-permissions:
-  contents: write
-  id-token: write
+concurrency:
+  group: release-${{ github.ref }}
+  cancel-in-progress: false
 
 env:
   GO_VERSION: '1.24.12'
@@ -16,6 +16,9 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    permissions:
+      contents: read
     steps:
       - name: Check out code
         uses: actions/checkout@v6
@@ -24,6 +27,7 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version: ${{ env.GO_VERSION }}
+          cache: true
 
       - name: Run tests
         run: go test -v -race ./...
@@ -31,7 +35,9 @@ jobs:
   validate:
     name: Validate tag and changelog
     runs-on: ubuntu-latest
-    needs: test
+    timeout-minutes: 5
+    permissions:
+      contents: read
     steps:
       - name: Check out code
         uses: actions/checkout@v6
@@ -50,8 +56,10 @@ jobs:
             || { echo "Invalid tag format: $TAG"; exit 1; }
 
           # Validate CHANGELOG has section for this tag
-          test -f CHANGELOG.md && grep -q "^## $TAG" CHANGELOG.md \
-            || { echo "CHANGELOG.md missing section for $TAG"; exit 1; }
+          # git-cliff produces format: ## [0.1.0] (without v prefix)
+          VERSION_NO_V="${TAG#v}"
+          test -f CHANGELOG.md && grep -q "^## \[${VERSION_NO_V}\]" CHANGELOG.md \
+            || { echo "CHANGELOG.md missing section for ${TAG} (expected: ## [${VERSION_NO_V}])"; exit 1; }
 
           # Ensure new tag is greater than previous tag
           LAST=$(git tag --list 'v*' --sort=-v:refname | sed -n '2p' || true)
@@ -62,10 +70,12 @@ jobs:
           fi
 
   goreleaser:
-    needs: validate
+    needs: [test, validate]
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     permissions:
       contents: write
+      id-token: write
     steps:
       - name: Check out code
         uses: actions/checkout@v6
@@ -76,6 +86,10 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version: ${{ env.GO_VERSION }}
+          cache: true
+
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v3
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
@@ -88,9 +102,49 @@ jobs:
   post-release:
     needs: goreleaser
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    permissions:
+      contents: read
     steps:
       - name: Refresh Go module proxy
+        shell: bash
         run: |
+          set -euo pipefail
           TAG="${GITHUB_REF##*/}"
-          curl -s "https://proxy.golang.org/github.com/go-kure/kure/@v/${TAG}.info" || true
-          echo "Refreshed proxy for $TAG"
+          MODULE="github.com/go-kure/kure"
+          PROXY_URL="https://proxy.golang.org/${MODULE}/@v/${TAG}.info"
+
+          echo "Refreshing Go module proxy for ${MODULE}@${TAG}"
+
+          # Retry with exponential backoff
+          MAX_RETRIES=3
+          RETRY_DELAY=5
+
+          for i in $(seq 1 $MAX_RETRIES); do
+            echo "Attempt $i of $MAX_RETRIES..."
+            HTTP_CODE=$(curl -s -o /tmp/proxy_response.txt -w "%{http_code}" "$PROXY_URL")
+
+            if [ "$HTTP_CODE" = "200" ]; then
+              echo "Successfully refreshed proxy for ${TAG}"
+              cat /tmp/proxy_response.txt
+
+              # Verify module is available
+              VERIFY_URL="https://proxy.golang.org/${MODULE}/@v/list"
+              if curl -s "$VERIFY_URL" | grep -q "^${TAG}$"; then
+                echo "Verified: ${TAG} is now available on proxy.golang.org"
+                exit 0
+              else
+                echo "Warning: ${TAG} refresh succeeded but not yet in version list"
+                exit 0
+              fi
+            fi
+
+            echo "Proxy returned HTTP ${HTTP_CODE}, retrying in ${RETRY_DELAY}s..."
+            sleep $RETRY_DELAY
+            RETRY_DELAY=$((RETRY_DELAY * 2))
+          done
+
+          echo "Warning: Failed to refresh proxy after ${MAX_RETRIES} attempts (HTTP ${HTTP_CODE})"
+          echo "The module may still become available after some delay"
+          # Don't fail the release for proxy issues
+          exit 0
