--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
   # =============================================================================
 
   validate:
-    name: Validate
+    name: lint
     runs-on: ubuntu-latest
     timeout-minutes: 5
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
@@ -104,7 +104,7 @@ jobs:
   # =============================================================================
 
   test:
-    name: Test
+    name: test
     runs-on: ubuntu-latest
     timeout-minutes: 15
     needs: validate
@@ -306,7 +306,7 @@ jobs:
   # =============================================================================
 
   build:
-    name: Build
+    name: build
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs: coverage-check
