--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -490,6 +490,52 @@ jobs:
         retention-days: 30
 
   # =============================================================================
+  # Docs Build (parallel with main pipeline)
+  # =============================================================================
+
+  docs-build:
+    name: docs-build
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
+
+    env:
+      HUGO_VERSION: '0.155.3'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v6
+
+    - name: Install Hugo CLI
+      run: |
+        wget -q -O ${{ runner.temp }}/hugo.deb \
+          https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+
+    - name: Check mounted files exist
+      run: bash site/scripts/check-mounts.sh
+
+    - name: Inject front matter
+      run: bash site/scripts/inject-frontmatter.sh
+
+    - name: Check for unmapped docs
+      run: bash site/scripts/check-unmapped-docs.sh
+
+    - name: Build Hugo site
+      working-directory: site
+      env:
+        HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
+        HUGO_ENVIRONMENT: production
+      run: hugo --minify --baseURL "https://www.gokure.dev/"
+
+    - name: Upload docs artifact
+      uses: actions/upload-artifact@v6
+      with:
+        name: docs-site
+        path: site/public/
+        retention-days: 7
+
+  # =============================================================================
   # PR-only Jobs (parallel, non-blocking)
   # =============================================================================
 
